fixed scrollbar css issues

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,7 +26,6 @@ html {
 body{
   width: 100%;
   height: 100%;
-  overflow: scroll;
   font-family: 'Roboto', helvetica, sans-serif;
   margin: 0;
 }
