--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -80,7 +80,6 @@ h1 {
   width: 100%;
   height: 100%;
   background: #F5F5F5;
-  overflow: scroll;
 }
 
 .edit_form {
@@ -166,7 +165,6 @@ input[type=email] {
 
 .profile_background{
   background: #F5F5F5;
-  overflow: scroll;
   position: absolute;
   width: 100%;
   height: inherit;
@@ -257,7 +255,6 @@ textarea {
   width: 100%;
   height: 100%;
   background-color: #F5F5F5;
-  overflow: scroll;
 }
 
 .interns_container {
@@ -312,7 +309,6 @@ textarea {
   padding-bottom: 10px;
   margin-bottom: 10px;
   float: left;
-  overflow-y: scroll;
 }
 
 .conversation_container {
@@ -324,7 +320,6 @@ textarea {
 .messages_content {
   height: 412px;
   width: 100%;
-  overflow: scroll;
 }
 
 .messages_text {
